--- a/navio/android/app/src/main/AndroidManifest.xml
+++ b/navio/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -29,5 +30,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <uses-permission android:name="android.permission.INTERNET" />
     </application>
 </manifest>
