--- a/navio/pubspec.yaml
+++ b/navio/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   home_widget: ^0.3.0
   http: ^1.1.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
